# pmaa

./: .gitignore  01_enrich-ocel-event-log.ipynb  02_analyze-with-pm4py.ipynb  03_resource-role-annotation.ipynb  04_split-logs-by-role.ipynb  05_role-process-mining.ipynb  06_declarative-process-mining.ipynb  07_process_markdowns.ipynb  08_bpmn_discovery.ipynb  09_role_declare_model_discovery.ipynb  CLAUDE.md  README.md  enrich_ocel_with_tasks.py
bpmn_models/: bpmn_bot.bpmn  bpmn_contributor.bpmn  bpmn_devops_engineer.bpmn  bpmn_feature_developer.bpmn  bpmn_issue_reporter.bpmn  bpmn_maintainer.bpmn  bpmn_quality_engineer.bpmn  bpmn_technical_writer.bpmn
declare_models/: declare_bot.json  declare_issue_reporter.json
langraph-agentic-app/: README.md  langraph-agentic-app-approach-evaluation-detailed.tex  langraph-agentic-app-approach-evaluation.tex  langraph-agentic-app.tex  pyproject.toml
langraph-agentic-app/docs/: architecture.md  generate_pipeline_pptx.py  github_setup_and_usage.md  pipeline-diagram.pptx  step3_process_artifacts_mining.tex
langraph-agentic-app/src/langraph_agentic_app/: __init__.py  app.py  config.py  graph.py  nodes.py  prompts.py  state.py
langraph-agentic-app/src/langraph_agentic_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
langraph-agentic-app/src/langraph_agentic_app/tools/: __init__.py  github_tools.py  memory_tools.py  policy_tools.py
role_logs/: bot_process_description.md  contributor_process_description.md  devops_engineer_process_description.md  feature_developer_process_description.md  ocel_bot.json  (+10 more)
